08/11 F Fixed if MySQL returns error 1226, we exit out.           [ #00]
08/07 F Fixed handling of uptime reporting from Sentinel services [ #00]
08/06 F Fixed EXCLUDE ADD not checking the nick lenghts.          [ #00]
08/05 F Fixed maxvalues setting on clean installs.                [#122]

Provided by Hal9000 <hal9000@denorastats.org> - 2007
08/08 F [inspircd11] Fixed autoop not working                     [#378]
08/07 U Updated GeoIP database file                               [ #00]
08/06 F [inspircd11] Fixed opers counted twice on burst           [#394]
08/03 F [inspircd11] fixed server uptime not being caught         [ #00]
08/03 F [inspircd11] fixed server MOTDs not working               [ #00]
08/03 F [inspircd11] ulined servers not being marked as ulined    [#382]
08/02 F Fixed admin struct not being cleaned up on reload         [#381]
08/01 F Passwords are now hidden from log on ADMIN ADD/SETPASS    [#402]
08/01 F Fixed extreme letter counting on some actions             [#399]
08/01 F Fixed ./Config not working on some Ubuntu systems         [ #00]
07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
07/18 U Updated GeoIP database file                               [ #00]
07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
07/18 A Made the ./Config process more clear about MySQL support  [ #00]
06/24 F Empty SWHOIS message now clears value instead of error    [#397]
05/09 F Fixed version message defined twice in InspIRCd 1.1       [#380]
05/09 F Fixed GeoIP not working correctly on InspIRCd 1.1         [#377]
02/28 A Added swhois support to nefarious                         [ #00]
02/28 A Added P10 account support                                 [ #00]
02/27 F Fixed AutoMode forced to +o in nefarious                  [ #00]
01/11 F Fixed wrong handling of chan modes in p10 burst           [ #00]
01/11 A Improved P10 hidden host support                          [ #00]