@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="45"
+VERSION_BUILD="46"
 
 # $Log$
+#
+# BUILD : 1.3.0.46 (SVN)
+# BUGS  : 355
+# NOTES : Inactive channels now get cleared from chan.db as well
 #
 # BUILD : 1.3.0.45 (SVN)
 # BUGS  : 378,394
